--- a/index.html
+++ b/index.html
@@ -17,146 +17,174 @@
     <div class="page-header">
       <h1>Расчет сложности задачи.</h1>
     </div>
-    <form role="form" class="form-horizontal" ng-controller="TaskCtrl">
-      <div class="row">
-        <div class="col-md-3">
-          <h2>Языки</h2>
-          <span class="help-block">Языки, на которых придется писать программисту.</span>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" ng-model="calc.cSharp"> C#
-            </label>
+    <ul class="nav nav-tabs" id="myTab">
+      <li><a href="#weight" data-toggle="tab">Веса</a></li>
+      <li class="active"><a href="#calc"  data-toggle="tab">Расчет</a></li>
+      <li><a href="#bugs" data-toggle="tab">Ошибки</a></li>
+    </ul>
+    <div class="tab-content">
+      
+      <div class="tab-pane fade" id="weight">...</div>
+      <div class="tab-pane fade active in" id="calc">
+        <div class="row form-horizontal" >
+          <div class="col-md-3">
+            <h2>Языки</h2>
+            <span class="help-block">Языки, на которых придется писать программисту.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.cSharp"> <span class="label label-primary">C#</span>
+              </label>
+            </div>
+            <span class="help-block">Если предпологается серверная часть, т.е. почти всегда.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.js"> <span class="label label-primary">JavaScript</span>
+              </label>
+            </div>
+            <span class="help-block">Если есть логика на клиентской части или используются компоненты (кобобокс, грид...).</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.html"> <span class="label label-primary">Html</span>
+              </label>
+            </div>
+            <span class="help-block">Если предпологается клиентская часть.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.css"> <span class="label label-primary">Css</span>
+              </label>
+            </div>
+            <span class="help-block">Если предпологается клиентская часть.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.sql"> <span class="label label-primary">Sql</span>
+              </label>
+            </div>
+            <span class="help-block">Если нужно создавать таблицы.</span>
           </div>
-          <span class="help-block">Если предпологается серверная часть, т.е. почти всегда. <span class="label label-primary">Вес - {{weight.cSharp}}</span></span>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" ng-model="calc.js"> JavaScript
-            </label>
+          <div class="col-md-3">
+            <h2>Слои</h2>
+            <span class="help-block">Слои приложения, затрагиваемые в задаче.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.ui"> <span class="label label-primary">Ui</span>
+              </label>
+            </div>
+            <span class="help-block">Если предпологается клиентская часть.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.uiServices"> <span class="label label-primary">Ui Services</span>
+              </label>
+            </div>
+            <span class="help-block">Если создается новый Арм или меняется логика старого.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.domainServices"> <span class="label label-primary">Domain Services</span>
+              </label>
+            </div>
+            <span class="help-block">Если меняется доменная логика или создается новая.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.domainModel"> <span class="label label-primary">Domain Model</span>
+              </label>
+            </div>
+            <span class="help-block">Если создаются новые классы доменной модели или меняются старые.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.dataAccess"> <span class="label label-primary">Data Access</span>
+              </label>
+            </div>
+            <span class="help-block">Если добавляются свойства в модель или создется новая модель.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.validation"> <span class="label label-primary">Validation</span>
+              </label>
+            </div>
+            <span class="help-block">Если затрагивается валидация.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.infrastructure"> <span class="label label-primary">Infrastructure</span>
+              </label>
+            </div>
+            <span class="help-block">Новый сервис. Например "рассылка писем".</span>
           </div>
-          <span class="help-block">Если есть логика на клиентской части или используются компоненты (кобобокс, грид...). <span class="label label-primary">Вес - {{weight.js}}</span></span>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Html
-            </label>
+          <div class="col-md-3">
+            <h2>Фреймворки</h2>
+            <span class="help-block">Фреймворки, используемые для решения задачи.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.mvc"> <span class="label label-primary">Mvc</span>
+              </label>
+            </div>
+            <span class="help-block">Если предпологается клиентская часть.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.backbone"> <span class="label label-primary">Backbone</span>
+              </label>
+            </div>
+            <span class="help-block">Изменине клиенских компонентов.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.ef"> <span class="label label-primary">EntityFramework</span>
+              </label>
+            </div>
+            <span class="help-block">Если добавляются свойства в модель или создется новая модель.</span>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" ng-model="calc.bootstrap">   <span class="label label-primary">Bootstrap</span>
+              </label>
+            </div>
+            <span class="help-block">Если предпологается клиентская часть.</span>
           </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Css
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Sql
-            </label>
+          <div class="col-md-3">
+            <h2>Компоненты</h2>
+            <h3>Формы</h3>
+            <div class="form-group">
+              <label class="col-md-6 control-label">Новые</label>
+              <div class="col-md-4">
+                <input type="number" class="form-control" >
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-md-6 control-label">Расширение</label>
+              <div class="col-md-4">
+                <input type="number" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-md-6 control-label">Логика</label>
+              <div class="col-md-4">
+                <input type="number" class="form-control">
+              </div>
+            </div>
+            <h3>Доменные модели</h3>
+            <div class="form-group">
+              <label class="col-md-6 control-label">Новые</label>
+              <div class="col-md-4">
+                <input type="number" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-md-6 control-label">Расширение</label>
+              <div class="col-md-4">
+                <input type="number" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-md-6 control-label">Логика</label>
+              <div class="col-md-4">
+                <input type="number" class="form-control">
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <h2>Слои</h2>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Ui
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Ui Services
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Domain Services
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Domain Model
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Data Access
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Validation
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Infrastructure
-            </label>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <h2>Фреймворки</h2>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Mvc
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Backbone
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> EntityFramework
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Bootstrap
-            </label>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <h2>Компоненты</h2>
-          <h3>Формы</h3>
-          <div class="form-group">
-            <label class="col-md-6 control-label">Новые</label>
-            <div class="col-md-4">
-              <input type="number" class="form-control" >
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-md-6 control-label">Расширение</label>
-            <div class="col-md-4">
-              <input type="number" class="form-control">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-md-6 control-label">Логика</label>
-            <div class="col-md-4">
-              <input type="number" class="form-control">
-            </div>
-          </div>
-          <h3>Доменные модели</h3>
-          <div class="form-group">
-            <label class="col-md-6 control-label">Новые</label>
-            <div class="col-md-4">
-              <input type="number" class="form-control">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-md-6 control-label">Расширение</label>
-            <div class="col-md-4">
-              <input type="number" class="form-control">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-md-6 control-label">Логика</label>
-            <div class="col-md-4">
-              <input type="number" class="form-control">
-            </div>
-          </div>
+        <div class="row" >
+          <p class="text-primary">Итого: {{result()}}</p>
         </div>
       </div>
-      <div class="row">
-        <p class="text-primary">Итого: {{result()}}</p>
-      </div>
-    </form>
+      <div class="tab-pane fade" id="bugs">...</div>
+    </div>
+
+    
   </div>
 
 
@@ -166,5 +194,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
     <script src="js/taskCtrl.js"></script>
+   <script>
+
+</script>
   </body>
 </html>
